--- a/index.html
+++ b/index.html
@@ -724,8 +724,8 @@
                             <label for="msg"><b>Message</b></label>
                             <textarea id="txtarea_consolidation" placeholder="Type message.." name="msg" required></textarea>
 
-                            <button onclick="javascript:validate();" type="submit" class="btn">Send</button>
-                            <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
+                            <button onclick="javascript:validate();" type="submit" class="btn-chat">Send</button>
+                            <button type="button" class="btn-chat cancel" onclick="closeForm()">Close</button>
                         </form>
                     </div>
                 </div>
