--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
         </div>
     </footer>
 
-    <section class="popup-chat">
+    <section class="popup-chat d-none">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -763,6 +763,19 @@
             }
         }
     </script>
+    <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/5dc6aa5843be710e1d1c7fb7/default';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
 </body>
 
 </html>
