--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             <p>Looking continuosly around ascertrain that they wer not overhead two habs covered nearer to the file and chuckled heartly</p>
 
 
-                            <button type="button" class="btn btn-primary btn-lg btn3d"><span class="glyphicon glyphicon-cloud"></span> LEARN MORE</button>
+                            <button type="button" class="btn-cust btn-primary btn-lg btn3d"><span class="glyphicon glyphicon-cloud"></span> LEARN MORE</button>
                         </div>
                     </div>
                 </div>
@@ -155,7 +155,7 @@
                         <div class="icon-item">
                             <h4>40 million High <br>Quality Images</h4>
                             <p>At first, for some time,i was not able to answer him one word but as he had taken me in his arms i held fast by him or i should have fallen to the ground</p>
-                            <button type="button" class="btn btn-primary btn-lg btn3d"><span class="glyphicon glyphicon-cloud"></span> LEARN MORE</button>
+                            <button type="button" class="btn-cust btn-primary btn-lg btn3d"><span class="glyphicon glyphicon-cloud"></span> LEARN MORE</button>
                         </div>
                     </div>
 
@@ -172,7 +172,7 @@
 
                                 <p>She gave my mother such a turn that i have always been convinced i am indebted to Miss Betsey for having been born on a friday</p>
 
-                                <button type="button" class="btn btn-primary btn-lg btn3d"><span class="glyphicon glyphicon-cloud"></span> LEARN MORE</button>
+                                <button type="button" class="btn-cust btn-primary btn-lg btn3d"><span class="glyphicon glyphicon-cloud"></span> LEARN MORE</button>
                             </div>
                         </div>
 
